finish: 在继承结构中通过循环找到所有的字段，完成字段的注入